--- a/frontend/style.css
+++ b/frontend/style.css
@@ -11,26 +11,35 @@ section {
     background-color: darkcyan;
     color: rgb(165, 92, 80);
 }
-h3 {
-    font-family: 'Mochiy Pop P One', sans-serif;
-}
+
 h1 {
-    background-color: darkcyan;
+    background-color: #1C5A4E;
+    width:  240px;
+    height: 240px;
+    font-size: 200px;
+    font-weight: lighter;
+    border-radius: 100%;
+    color: #FFEEDF;
+    text-align: center;
+    border:  none;
     display: flex;
     justify-content: center;
-    align-items: center;
-    color: red;
-    font-size: 100px;
 }
-h1 {background-color: #1C5A4E;
-		 width:  240px;
-    	 height: 240px;
-    	 font-size: 200px;
-    	 font-weight: lighter;
-    	 border-radius: 100%;
-    	 color: #FFEEDF;
-    	 text-align: center;
-    	 border:  none;
-		 line-height: 0;
-		 padding: bottom;
+h2  {
+    
+    background-color: #1C5A4E;
+    width:  100px;
+    height: 100px;
+    font-size: 100px;
+    font-weight: lighter;
+    border-radius: 100%;
+    color: #FFEEDF;
+    justify-content: center;
+    display: flex;
+    float: left;
+    text-align: center;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+
 }
